IMAP: Fixed stream vs. parse exception handling.

* Protocol::HandleNextResponse() will now exit when a stream exception
  occurs.
* This should fix bug #12601.